fix(header): authorization link is clipped

--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -75,14 +75,17 @@
   &__user {
     a, span {
       display: block;
-      max-width: calc(100% - 1.7em);
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
       color: #77879B;
       font-family: 'Roboto', sans-serif;
       font-weight: 700;
       font-size: .9em;
+    }
+
+    span {
+      max-width: calc(100% - 1.7em);
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
 
     a {
